--- a/product.html
+++ b/product.html
@@ -102,6 +102,15 @@
                 <img height="150px" src="img\product-all\3.png" alt="">
                 &nbsp;</h2>
             </div>
+            
+        </div>
+    </div>
+    <!-- Page Header End -->
+
+
+    <!-- Product Start -->
+    <div class="container-xxl">
+        <div class="container">
             <h1 class="display-3 mb-3 animated slideInDown">Máy lọc không khí</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb mb-0">
@@ -110,15 +119,6 @@
                     <li class="breadcrumb-item text-dark active" aria-current="page">Máy lọc không khí</li>
                 </ol>
             </nav>
-        </div>
-    </div>
-    <!-- Page Header End -->
-
-
-    <!-- Product Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            
             <div class="row g-0 gx-5 align-items-end">
                 <div class="col-lg-6">
                     <div class="section-header text-start mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
